Caffein2/static/assets/css/style.css
/* ... */
.hvr-shadow:hover, .hvr-shadow:focus, .hvr-shadow:active {
  box-shadow: 0 10px 10px -10px rgba(0, 0, 0, 0.5);
}

.hvr-glow {
  vertical-align: middle;
  -webkit-transform: perspective(1px) translateZ(0);
  transform: perspective(1px) translateZ(0);
  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  -webkit-transition-property: box-shadow;
  transition-property: box-shadow;
}
.hvr-glow:hover, .hvr-glow:focus, .hvr-glow:active {
  box-shadow: 0 0 6px rgba(0, 0, 0, 0.6);
}

/* User uploaded */
.img-default-up {
     width: auto;
    height: auto;
    max-width: 100px;
    max-height: 100px;

}
.img-default {
     width: auto;
    height: auto;
    max-width: 70px;
    max-height: 70px;
}
/* Used in meeting templates */
.card {
	margin-bottom:5em;
	margin-top:5em;
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
    transition: 0.3s;
    max-width: 614px;
    width:90%;
    border-radius: 5px;
}
.dropdown-option {
    position: relative;
    display: inline-block;
}
.dropdown-content {
    display: none;
    position: absolute;
    background-color: #f1f1f1;
    min-width: 6em;
    overflow: auto;
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
    z-index: 1;
}
.dropdown-content a {
    color: black;
    padding: 12px 16px;
    text-decoration: none;
    display: block;
}
.dropdown a:hover {background-color: #ddd;}

.dropdown-content div {
    color: black;
    padding: 12px 16px;
    text-decoration: none;
    display: block;
}

.dropdown div:hover {background-color: #ddd;}

.show {display: block;}

/* Instagram-like comments */
#textfield-comment {
	display: flex;
	background: 0 0;
    border: 0;
    color: #262626;
    font-size: inherit;
    height: 18px;
    max-height: 80px;
    outline: 0;
    padding: 0;
    resize: none;

}

.photo-slide {display: none }
/* Next & previous buttons */
.prev, .next {
  cursor: pointer;
  position: absolute;
  top: 50%;
  width: auto;
  padding: 16px;
  margin-top: -22px;
  color: white;
  font-weight: bold;
  font-size: 18px;
  transition: 0.6s ease;
  border-radius: 0 3px 3px 0;
}

/* Position the "next button" to the right */
.next {
  right: 0;
  border-radius: 3px 0 0 3px;
}

/* On hover, add a black background color with a little bit see-through */
.prev:hover, .next:hover {
  background-color: rgba(0,0,0,0.8);
}

/* Fading animation */
.fading {
  -webkit-animation-name: fade;
  -webkit-animation-duration: 1.5s;
  animation-name: fade;
  animation-duration: 1.5s;
}

@-webkit-keyframes fading {
  from {opacity: .4}
  to {opacity: 1}
}

@keyframes fading {
  from {opacity: .4}
  to {opacity: 1}
}


/* KARMO template*/
*{
	outline:0;padding: 0;margin:0;
	-webkit-box-sizing:border-box;
	        box-sizing:border-box;
}

body{
		background: #fff;
		color:#777;
    font:400 14px/1.8 'Cantarell', sans-serif;
		-webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    overflow-x: hidden;
}

/* #####  text  ##### */

h1,h2,h3,h4,h5,h6{
	color:#000;
	font-family: 'Cantarell', sans-serif;
}

a:hover:after {
    width: 50%;
}
a:hover, a:focus {
    color: #000;
    text-decoration: none;
}

ol, ul {
    list-style: none;
}

p{
    color: #777;
    font-size: 15px;
    font-weight: 300;
}

.lead{
	color: #000;
	font-size: 20px;
}

.libre-text{
	font-family: "Cantarell", "Times New Roman",
	sans-serif; font-size: 15px;
}

@media only screen and (max-width : 480px){
	.libre-text{ font-size: 14px;
		}
	}

.white-color{
	color:white;
}

.green-text{
	color:#7beec7;
}

.gray-text{
	color:#ccc !important;
}

.white{
	color:#fff;
}

.yellow{
	color: #ffeedb !important;
}

.bolder {
    font-weight: 900;
    color:#ffeedb;
}

.uppercase{
	text-transform: uppercase;
}

ul.social-icons li a:hover{
	color:#7beec7;
}


/* #####  diagram skills  ##### */

.skills {
	float:left;
	clear:both;
	width:100%;
}

.skills ul,
.skills li {
	display:block;
	list-style:none;
	margin:0;
	padding:0;
}

.skills li {
	float:right;
	clear:both;
	padding:0 15px;
	height:35px;
	line-height:35px;
	color:#fff;
	margin-bottom:1px;
	font-size:17px;
	letter-spacing: 1px;
	text-transform: uppercase;
}

#diagram {
	float:right;
	width:600px;
	height:600px;
}

.get {
	display:none;
}

@media only screen and (max-width : 992px){

	#diagram {

	float:left;
	width:700px;
	height:600px;

	}

}

@media only screen and (min-width : 992px){

	#diagram {

	float:right;
	width:450px;
	height:450px;

	}

}

@media only screen and (min-width : 1200px){

 	#diagram {

	float:right;
	width:600px;
	height:600px;
	margin-top: -50px !important;

	}
}


/* #####  sections  ##### */


.section-overlay ~ .container {
    position: relative;
    z-index: 5;
}

section{
	position: relative;
}

.section-overlay {
	position: absolute;
    width: 100%;
    top: 0;
    left: 0;
    height: 100%;
    z-index: 1;
    background-image: url(../img/dot.gif);
    opacity: 0.06;
}

.center {
    text-align: center;
}

.right{
	text-align: right;
}

.left{
	text-align: left;
}

.mt-50{
	margin-top: 50px;
}
.mt-100{
	margin-top: 100px;
}

.mt-150{
	margin-top: 150px;
}

.mb-50{
	margin-bottom: 50px;
}

.mb-100{
	margin-bottom: 100px;
}

.mb-150{
	margin-bottom: 150px;
}

.mbr-box {
    display: table;
    width: 100%;
}

.mbr-section--bg-adapted {
    background-attachment: scroll;
    background-position: 50% 0;
    background-repeat: no-repeat;
    background-size: cover;
}

.mbr-section--full-height {
    height: 100vh;
}
.mbr-section--fixed-size {
    overflow: hidden;
}
.mbr-section--relative {
    position: relative;
}
.mbr-section {
    padding: 0 20px;
}
.mbr-parallax-background, .mbr-background {
    background-attachment: fixed !important;
    background-position: 50% 0;
    background-repeat: no-repeat;
    background-size: cover !important;
}

.mbr-background {
  background-attachment: scroll !important;
}
/* ... */

